--- a/.github/workflows/release-installer.yml
+++ b/.github/workflows/release-installer.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run Inno Setup Compiler
       run: |
-        "C:\InnoSetup\ISCC.exe" installer.iss
+        & "C:\InnoSetup\ISCC.exe" "installer.iss"
 
     - name: Upload installer artifact
       uses: actions/upload-artifact@v4
